May 14 2008  devel  Tweaked wrt54 source
May 12 2008  devel  Added configure patch for OSX and debian control files
                     from Evan Broder
                    Fixed imagemagick detect on modern IM installs
May 09 2008  devel  Added gpsmap patches from Kripton to support open street maps
Apr 09 2008  devel  Added DLT80211 and DLT80211_AVS to the linktype setting
                     code on Darwin, BSD
                    Added 'kismet' wrapper binary, conf files to clean/distclean
Apr 08 2008  devel  Fixed assorted messages being printed in quiet mode
Mar 25 2008  devel  Added additional warnings/info for madwifi-ng about
                     autocreate=none when other vaps are found.
Mar 19 2008  devel  Removed wlancond/power setting on Maemo/Nokia since it
                     doesn't seem to reliably help
Mar 16 2008  devel  Merged patches from Alexandre Balavas to clean up warnings
                     on CentOS
Mar 02 2008  devel  Re-ordered headers in panelfront_display to prevent weird
                     compiler issue on Darwin
Feb 24 2008  devel  Fixed gpsd speed issue on water mode, thanks again to
                     Antonio
Feb 12 2008  devel  Fixed segv on gps=false introduced in recent gps rewrite
                     (thanks Antonio Eugenio Burriel for patch)
                    Added rt61 and rt8187 source names
Feb 06 2008  devel  Fixed segv on OSX in client on closedir
Jan 30 2008  devel  Revamped GPS to use 'watch' mode in GPSD
                    Revamped GPS again to work with watch better and to 
                     dynamically use poll mode on older GPSD implementations
                    Revamped GPS a third time in the same day to take the
                     seemingly broken Maemo GPSD into account and use R=1
                     debug mode on Maemo devices
Jan 29 2008  devel  Added Hildon GPS support
                    Fixed huge bug in IE tag parsing that ignored large