@@ -1,3 +1,4 @@
+May 15 2008  devel  Tweaked the wrt54 stuff more (where does prism0 come from?)
 May 14 2008  devel  Tweaked wrt54 source
 May 12 2008  devel  Added configure patch for OSX and debian control files
                      from Evan Broder
